--- a/test/layout.html
+++ b/test/layout.html
@@ -1,9 +1,9 @@
 <!doctype HTML>
     <HTML>
 <HEAD>
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="layout.css">cd 
   
-    <title>ASSIGNMENT TABLE</title>
+    <title>Float</title>
 </HEAD>
     <body>
     <div class="header">
